syntax = "proto3";

package klausapp;

import 'google/protobuf/timestamp.proto';

service Klaus {
  rpc getCategoryScore (TimePeriod) returns (stream CategoryScoreByInterval);
  rpc getTicketScore (TimePeriod) returns (stream TicketScoreByCategory);
  rpc getOverallScore (TimePeriod) returns (OverallScore);
  rpc getScoreChangePoP (GetScoreChangePoPRequest) returns (ScoreChangePoP);
}

message TimePeriod {
  google.protobuf.Timestamp startDate = 1;
  google.protobuf.Timestamp endDate = 2;
}

/* getCategoryScore */

message CategoryScoreByInterval {
  message IntervalScore {
    string interval = 1;
    float score = 2;
  }

  int32 id = 1;
  string name = 2;
  int32 ratingCount = 3;
  repeated IntervalScore scoreByInterval = 4;
  float overallScore = 5;
}

/* getTicketScore */

message TicketScoreByCategory {
  message CategoryScore {
    string name = 1;
    float score = 2;
  }

  int32 ticketId = 1;
  repeated CategoryScore categoryScores = 2;
}

/* getOverallScore */

message OverallScore {
  float score = 1;
}

/* getScoreChangePoP */

message GetScoreChangePoPRequest {
  TimePeriod firstPeriod = 1;
  TimePeriod secondPeriod = 2;
}

message ScoreChangePoP {
  float scoreChange = 1;
}