// Original file: proto/klausapp.proto

import type { Timestamp as _google_protobuf_Timestamp, Timestamp__Output as _google_protobuf_Timestamp__Output } from '../google/protobuf/Timestamp';

export interface TimePeriod {
  'startDate'?: (_google_protobuf_Timestamp | null);
  'endDate'?: (_google_protobuf_Timestamp | null);
}

export interface TimePeriod__Output {
  'startDate': (_google_protobuf_Timestamp__Output | null);
  'endDate': (_google_protobuf_Timestamp__Output | null);
}
